--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Firebase Deploy
 on:
   push:
     branches:
-      - main  # Adjust if you're using a different branch for deployment
+      - main
 
 jobs:
   build-and-deploy:
@@ -16,10 +16,14 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'  # Ensure this matches your local environment
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
+
+      - name: Run Lint
+        run: npm run lint
+        continue-on-error: true  # Allows the workflow to continue even if lint fails
 
       - name: Build React app
         run: npm run build
