--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Firebase Deploy
 on:
   push:
     branches:
-      - main  # Adjust if you're using a different branch for deployment
+      - main
 
 jobs:
   build-and-deploy:
@@ -16,10 +16,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'  # Ensure this matches your local environment
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
+
+      - name: Install Firebase Functions dependencies
+        working-directory: ./functions
+        run: npm install
+
+      - name: Install Firebase Functions dependencies (axios)
+        working-directory: ./functions
+        run: npm install axios
 
       - name: Build React app
         run: |
@@ -28,7 +36,9 @@ jobs:
 
       - name: Deploy to Firebase Hosting and Functions
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
+          echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" > $RUNNER_TEMP/credentials.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$RUNNER_TEMP/credentials.json
           npm install -g firebase-tools
           firebase deploy --only hosting,functions
