--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -34,16 +34,10 @@ jobs:
           unset CI  # Unset the CI variable to prevent treating warnings as errors
           npm run build
 
-      - name: Set up Google Cloud authentication
-        env:
-            GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
-        run: |
-            echo "${GOOGLE_CREDENTIALS_JSON}" > $RUNNER_TEMP/credentials.json
-            export GOOGLE_APPLICATION_CREDENTIALS=$RUNNER_TEMP/credentials.json
-  
       - name: Deploy to Firebase Hosting and Functions
         env:
-            GOOGLE_APPLICATION_CREDENTIALS: $RUNNER_TEMP/credentials.json
+            FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
             npm install -g firebase-tools
             firebase deploy --only hosting,functions
+  
