--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -39,5 +39,5 @@ jobs:
             FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
             npm install -g firebase-tools
-            firebase deploy --only hosting,functions
+            firebase deploy
   
